--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,21 @@
   "default_locale": "en",
   "content_scripts": [
     {
-      "matches": ["*://news.ycombinator.com/", "*://news.ycombinator.com/news*"],
-      "css": ["css/news.css"]
+      "matches": ["*://news.ycombinator.com/*"],
+      "css": ["css/global.css"]
     },
     {
       "matches": ["*://news.ycombinator.com/item*"],
       "css": ["css/item.css"]
+    },
+    {
+      "matches": ["*://news.ycombinator.com/", "*://news.ycombinator.com/news*", "*://news.ycombinator.com/newest*",
+        "*://news.ycombinator.com/show*", "*://news.ycombinator.com/ask*", "*://news.ycombinator.com/from*"],
+      "css": ["css/itemlist.css"]
+    },
+    {
+      "matches": ["*://news.ycombinator.com/newcomments*"],
+      "css": ["css/commentlist.css"]
     },
     {
       "matches": ["*://news.ycombinator.com/user*"],
